--- a/server/public/index.html
+++ b/server/public/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <title>Server-Side Calculator</title>    
+    <meta charset="utf-8" />
+    <title>Server-Side Calculator</title>
     <script defer src="scripts/axios.js"></script>
     <script defer src="scripts/client.js" charset="utf-8"></script>
   </head>
@@ -10,21 +10,21 @@
     <h1>Server-Side Calculator</h1>
 
     <form data-testid="calculator">
-      <input placeholder="First Number">
+      <input placeholder="First Number" />
       <button>+</button>
       <button>-</button>
       <button>*</button>
       <button>/</button>
-      <input placeholder="Second Number">
+      <input placeholder="Second Number" />
       <button>=</button>
       <button>C</button>
     </form>
 
-    <section data-testid="recentResult">
+    <section id="recentResult" data-testid="recentResult">
       <!-- The most recent calculation result goes here. -->
     </section>
 
-    <section data-testid="resultHistory">
+    <section id="resultHistory" data-testid="resultHistory">
       <!-- The list of calculation results goes here. -->
     </section>
   </body>
